fix for scrollbars covered by sticky elements in Safari

--- a/Web.Upnp.Control/ClientApp/src/styles/index.scss
+++ b/Web.Upnp.Control/ClientApp/src/styles/index.scss
@@ -250,6 +250,10 @@ $zindex-dropdown: $zindex-sticky + 5;
     }
 }
 
+.safari-scroll-fix {
+    z-index: $zindex-sticky + 1;
+}
+
 .stack {
     position: relative;
 
